--- a/WinFormsApp1/DaddysLanka.csproj
+++ b/WinFormsApp1/DaddysLanka.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="CryptSharp" Version="1.3.0" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
+    <PackageReference Include="QuestPDF" Version="2025.5.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
 
